[package]
name = "rdbms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
zerocopy = "0.6.1"

[dev-dependencies]
md-5 = "0.10.1"
sha-1 = "0.10.0"
tempfile = "3.3.0"
